--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Classroom Cloud</title>
+<title>Classroom 1076 Cloud</title>
 </head>
 <body>
 <h1>Hello from the Real Cloud!</h1>
